<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:background="#002230"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-10dp"
        android:background="@drawable/rectangle_09" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="95dp"
        android:orientation="horizontal">

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/img_edit" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center|left"
            android:text="@string/todo_list"
            android:textColor="#002230"
            android:textSize="24sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgDeleteTask"
        android:visibility="gone"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/ic_delete" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="78dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/content"
        android:textColor="#DDDEDF"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtContent"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/rectangle_1"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/nh_p_n_i_dung"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="138dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/due_date"
        android:textColor="#DDDEDF"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtShowDate"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="85dp"
        android:background="@drawable/rectangle_1"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/ch_n_ng_y"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPickDate"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/rectangle_09"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/ch_n"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="218dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/priority"
        android:textColor="#DDDEDF"
        android:textSize="16sp" />

    <View
        android:layout_width="250dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="188dp"
        android:background="@drawable/rectangle_05" />

    <RadioGroup
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="182dp">

        <RadioGroup
            android:id="@+id/rgSubChoice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rvVeryImportant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/very_important"
                android:textColor="#D50000"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rbNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/nomarl"
                android:textColor="#00C853"
                android:textSize="12sp" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/rgSubChoice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbImportant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/important"
                android:textColor="#FF6D00"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rbLeisurely"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/leisurely"
                android:textColor="#0091EA"
                android:textSize="12sp" />

        </RadioGroup>
    </RadioGroup>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginStart="45dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rectangle_09"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/save" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rectangle_09"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/cancel" />

    </LinearLayout>


</RelativeLayout>