<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#002230"
    android:clipToOutline="true"
    tools:context=".ui.Todo.TodoFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="181dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-30dp"
        android:background="@drawable/rectangle_09" />

    <View
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="127dp"
        android:background="@drawable/rectangle_10" />

    <ImageView
        android:id="@+id/imgOnGoing"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="127dp"
        android:background="#002230ED" />

    <ImageView
        android:id="@+id/imgDone"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="210dp"
        android:layout_marginTop="127dp"
        android:background="#002230ED" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="235dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/on_going"
        android:textAppearance="@style/on_going"
        android:textStyle="bold" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/done"
        android:textAppearance="@style/done"
        android:textStyle="bold" />

    <View
        android:layout_width="3dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="210dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/group_12" />

    <LinearLayout
        android:layout_width="214dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="103dp"
        android:layout_marginTop="68dp"
        android:orientation="horizontal">

        <View
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/img_edit" />

        <TextView
            android:layout_width="183dp"
            android:layout_height="54dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/todo_list"
            android:textAppearance="@style/todo_list1"
            android:textStyle="bold" />

    </LinearLayout>

    <ListView
        android:id="@+id/lv_TodoList"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="216dp"
        android:descendantFocusability="blocksDescendants"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddTask"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="80dp"
        android:src="@drawable/img_edit" />

</RelativeLayout>